<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/sign_in1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RelativeLayout
            android:id="@+id/content_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/rectangle_1"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="-10dp"
                android:contentDescription="rectangle_1"
                android:scaleType="fitXY"
                android:scaleY="1.1"
                android:src="@drawable/rectangle_1" />

            <RelativeLayout
                android:id="@+id/frame_6"
                android:layout_marginTop="269dp"
                android:layout_marginStart="11dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/input_default"
                    android:layout_marginTop="15.5dp"
                    android:layout_marginStart="25.5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/email"
                        android:fontFamily="Poppins"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:textColor="@color/email_color"
                        android:layout_marginLeft="13dp"
                        android:layout_marginTop="16dp"
                        android:layout_width="57dp"
                        android:layout_height="33.5dp"
                        android:text="@string/email_string" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/frame_6_ek1"
                    android:layout_marginTop="78.5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:id="@+id/group_5"
                        android:layout_marginTop="9.25dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RelativeLayout
                            android:id="@+id/input_variant2"
                            android:layout_marginTop="0dp"
                            android:layout_marginStart="26dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/password1"
                                android:fontFamily="Poppins"
                                android:gravity="center"
                                android:textSize="15sp"
                                android:textColor="@color/email_color"
                                android:layout_marginLeft="13dp"
                                android:layout_marginTop="16dp"
                                android:layout_width="94dp"
                                android:layout_height="36.5dp"
                                android:text="@string/password_string" />

                        </RelativeLayout>

                        <TextView
                            android:id="@+id/forgot_your_password_"
                            android:fontFamily="Poppins"
                            android:gravity="center"
                            android:textSize="15sp"
                            android:textColor="@color/email_color"
                            android:layout_marginLeft="131dp"
                            android:layout_marginTop="72dp"
                            android:layout_width="196dp"
                            android:layout_height="32.42dp"
                            android:text="@string/forgot_your_password__string" />

                        <RelativeLayout
                            android:id="@+id/frame_1"
                            android:layout_marginTop="120dp"
                            android:layout_marginStart="26dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                        </RelativeLayout>

                        <TextView
                            android:id="@+id/sign_in"
                            android:fontFamily="Poppins"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:textSize="15sp"
                            android:textColor="@color/sign_in_color"
                            android:layout_marginLeft="-3dp"
                            android:layout_marginTop="127dp"
                            android:layout_width="351dp"
                            android:layout_height="64.95dp"
                            android:text="@string/sign_in_string" />

                    </RelativeLayout>

                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="46dp"
                android:layout_marginTop="107dp">

                <View
                    android:id="@+id/ellipse_4"
                    android:layout_width="102dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="95dp"
                    android:background="@drawable/CoupleHugs_bg_circle" />

                <RelativeLayout
                    android:id="@+id/bold_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="78dp"
                    android:layout_marginTop="106dp">

                    <TextView
                        android:id="@+id/sign_in_ek1"
                        android:layout_width="110dp"
                        android:layout_height="52.5dp"
                        android:layout_marginLeft="6dp"
                        android:layout_marginTop="12.5dp"
                        android:fontFamily="Poppins"
                        android:gravity="center"
                        android:text="@string/sign_in_ek1_string"
                        android:textColor="@color/email_color"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/after_line_part"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="431dp">

                    <RelativeLayout
                        android:id="@+id/group_5_ek1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18.72dp">

                        <RelativeLayout
                            android:id="@+id/group_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="80dp"
                            android:layout_marginTop="49dp">
                            <RelativeLayout
                                android:id="@+id/google_icon_wrapper"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">

                                <View
                                    android:id="@+id/ellipse_5_google"
                                    android:layout_width="44.17dp"
                                    android:layout_height="44.17dp"
                                    android:background="@drawable/ellipse_shape" />

                                <ImageView
                                    android:id="@+id/google_icon"
                                    android:layout_width="44.17dp"
                                    android:layout_height="44.17dp"
                                    android:layout_centerInParent="true"
                                    android:contentDescription="Google Icon"
                                    android:src="@drawable/google_icon" />

                            </RelativeLayout>

                            <RelativeLayout
                                android:id="@+id/group_1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="63dp">

                                <View
                                    android:id="@+id/ellipse_5"
                                    android:layout_width="44.17dp"
                                    android:layout_height="44.17dp"
                                    android:background="@drawable/ellipse_shape" />

                                <ImageView
                                    android:id="@+id/facebook_f_logo__2021__svg_1"
                                    android:layout_width="28.58dp"
                                    android:layout_height="30.26dp"
                                    android:layout_marginStart="8dp"
                                    android:layout_marginTop="7dp"
                                    android:contentDescription="facebook_f_logo__2021__svg_1"
                                    android:src="@drawable/facebook_icon" />

                            </RelativeLayout>

                        </RelativeLayout>

                        <RelativeLayout
                            android:id="@+id/group_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <View
                                android:id="@+id/line_3"
                                android:layout_width="103dp"
                                android:layout_height="1dp"
                                android:layout_marginStart="165dp"
                                android:layout_marginTop="19dp"
                                android:background="@drawable/line_shape" />

                            <View
                                android:id="@+id/line_4"
                                android:layout_width="103dp"
                                android:layout_height="1dp"
                                android:layout_marginTop="19dp"
                                android:background="@drawable/line_shape" />

                            <TextView
                                android:id="@+id/or"
                                android:layout_width="154dp"
                                android:layout_height="49.5dp"
                                android:layout_marginLeft="61dp"
                                android:fontFamily="Poppins"
                                android:gravity="center"
                                android:text="@string/or_string"
                                android:textColor="@color/email_color"
                                android:textSize="15sp" />

                        </RelativeLayout>

                        <TextView
                            android:id="@+id/don_t_have_an_account__sign_up"
                            android:layout_width="264dp"
                            android:layout_height="71.36dp"
                            android:layout_marginLeft="6dp"
                            android:layout_marginTop="164dp"
                            android:fontFamily="Poppins"
                            android:gravity="center"
                            android:text="@string/don_t_have_an_account__sign_up_string"
                            android:textColor="@color/email_color"
                            android:textSize="15sp" />

                    </RelativeLayout>

                </RelativeLayout>

            </RelativeLayout>

            <ImageView
                android:id="@+id/enlarge_untitled_logo_2_free_file_removebg_1"
                android:layout_width="198dp"
                android:layout_height="155dp"
                android:layout_marginStart="90dp"
                android:layout_marginTop="59dp"
                android:contentDescription="Couple Hugs Icon Logo"
                android:scaleX="1.1"
                android:scaleY="1.1"
                android:src="@drawable/couple_icon" />

        </RelativeLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
